crates/loom-cuda-sys/cuda/include/loom_cuda.h

// Apply an exact per-row top-k threshold to logits in place. top_ks is one
// contiguous int32 value per row in [1, vocab_size]. Values strictly below
// the kth largest value become negative infinity; threshold ties are retained.
// Device metadata values are trusted and logits must not contain NaNs.
// workspace contains partition-sorted uint32 radix keys and threshold keys.
int loom_cuda_top_k_filter_f32(
    float* logits, const int32_t* top_ks, uint32_t* workspace,
    uint64_t workspace_elements, uint32_t rows, uint32_t vocab_size,
    uint64_t row_stride, uint32_t partitions, void* stream);
int loom_cuda_top_k_filter_f16(
    uint16_t* logits, const int32_t* top_ks, uint32_t* workspace,
    uint64_t workspace_elements, uint32_t rows, uint32_t vocab_size,
    uint64_t row_stride, uint32_t partitions, void* stream);
int loom_cuda_top_k_filter_bf16(
    uint16_t* logits, const int32_t* top_ks, uint32_t* workspace,
    uint64_t workspace_elements, uint32_t rows, uint32_t vocab_size,
    uint64_t row_stride, uint32_t partitions, void* stream);
// Apply exact per-row top-p filtering and return F32 probabilities
// renormalized over the retained set. Ties use descending token IDs. top_ps
// contains one trusted value in (0, 1] per row. Logits may contain -infinity,
// but each row must contain a finite value and neither NaN nor +infinity.
int loom_cuda_top_p_renorm_f32(
    float* logits, const float* top_ps, float* probabilities,
    uint8_t* workspace, uint64_t workspace_bytes, uint32_t rows,
    uint32_t vocab_size, uint64_t row_stride, uint32_t partitions,
    void* stream);
int loom_cuda_top_p_renorm_f16(
    uint16_t* logits, const float* top_ps, float* probabilities,
    uint8_t* workspace, uint64_t workspace_bytes, uint32_t rows,
    uint32_t vocab_size, uint64_t row_stride, uint32_t partitions,
    void* stream);
int loom_cuda_top_p_renorm_bf16(
    uint16_t* logits, const float* top_ps, float* probabilities,
    uint8_t* workspace, uint64_t workspace_bytes, uint32_t rows,
    uint32_t vocab_size, uint64_t row_stride, uint32_t partitions,
    void* stream);
// Apply repetition once to the prompt/output union, then frequency and
// presence penalties from output counts. Token IDs outside [0, vocab_size)
// are padding. workspace is [rows, workspace_capacity] packed uint64 hash
// storage; capacity must be a power of two at least twice the combined padded
// prompt/output width.
int loom_cuda_apply_token_penalties_f32(
    float* logits, const int64_t* prompt_token_ids,
    const int64_t* output_token_ids, const float* presence_penalties,
    const float* frequency_penalties, const float* repetition_penalties,
    uint64_t* workspace, uint32_t rows, uint32_t vocab_size,
    uint32_t prompt_tokens, uint32_t output_tokens,
    uint32_t workspace_capacity, uint64_t logits_row_stride,
    uint64_t prompt_row_stride, uint64_t output_row_stride,
    uint64_t workspace_row_stride, void* stream);
// Deterministic greedy speculative verification over flattened ragged draft
// tokens. cumulative_draft_lengths is inclusive and has one int32 entry per
// request. Output is contiguous [requests, max_draft_tokens + 1], padded with
// -1. Accepted and emitted lengths contain one int32 value per request.
int loom_cuda_greedy_speculative_verify(
    const int32_t* draft_token_ids, const int64_t* target_token_ids,
    const int32_t* bonus_token_ids,
    const int32_t* cumulative_draft_lengths, int32_t* output_token_ids,
    int32_t* accepted_lengths, int32_t* emitted_lengths, uint32_t requests,
    uint32_t draft_tokens, uint32_t max_draft_tokens, void* stream);
// Apply one F32 logits-preprocessing pass in place. blocked_mask is optional,
// contiguous [rows, vocab_size] uint8 storage where nonzero means suppressed.
// Sparse bias arrays are an optional equal-length triplet; sparse suppression
// arrays are an optional equal-length pair. Sparse row/token values and unique
// bias targets are trusted. Temperatures below 1e-5 use a divisor of one.
int loom_cuda_logits_preprocess_f32(
    float* logits, const float* temperatures, const uint8_t* blocked_mask,
    const int32_t* bias_row_ids, const int32_t* bias_token_ids,
    const float* bias_values, uint32_t bias_count,
    const int32_t* suppressed_row_ids,
    const int32_t* suppressed_token_ids, uint32_t suppression_count,
    uint32_t rows, uint32_t vocab_size, uint64_t row_stride, void* stream);
int loom_cuda_min_p_filter_f32(float* logits, const float* min_p,
                               uint32_t rows, uint32_t vocab_size,
                               uint64_t row_stride, void* stream);
int loom_cuda_min_p_filter_f16(uint16_t* logits, const float* min_p,
                               uint32_t rows, uint32_t vocab_size,
                               uint64_t row_stride, void* stream);
int loom_cuda_min_p_filter_bf16(uint16_t* logits, const float* min_p,
                                uint32_t rows, uint32_t vocab_size,
                                uint64_t row_stride, void* stream);
// Base paged MQA/GQA decode attention for one query token per sequence.
// Query/output are contiguous [sequences, query_heads, dim]; native K/V
// caches have dense inner NHD [block_size, kv_heads, dim] dimensions and an
// explicit element stride between blocks. This accepts both separate caches
// and K/V views of vLLM's interleaved [blocks, 2, block_size, kv_heads, dim]
// storage. Block tables and sequence lengths are contiguous int32 engine
// metadata. Sequence lengths include the current token and are trusted to be
// in [1, max_sequence_length]; active block IDs are trusted to be in
// [0, num_blocks). This kernel family is intentionally limited to
// max_sequence_length <= 1024 and does not implement ALiBi, sliding windows,
// soft caps, quantized KV, or multi-token queries.
int loom_cuda_paged_decode_attention_f32(
    const float* query, const float* key_cache, const float* value_cache,
    const int32_t* block_tables, const int32_t* sequence_lengths,
    float* output, uint32_t sequences, uint32_t query_heads,
    uint32_t kv_heads, uint32_t head_size, uint32_t value_head_size,
    uint32_t num_blocks, uint32_t block_size, uint64_t key_block_stride,
    uint64_t value_block_stride,
    uint32_t max_blocks_per_sequence, uint32_t max_sequence_length,
    float scale, void* stream);
int loom_cuda_paged_decode_attention_f16(
    const uint16_t* query, const uint16_t* key_cache,
    const uint16_t* value_cache, const int32_t* block_tables,
    const int32_t* sequence_lengths, uint16_t* output, uint32_t sequences,
    uint32_t query_heads, uint32_t kv_heads, uint32_t head_size,
    uint32_t value_head_size, uint32_t num_blocks, uint32_t block_size,
    uint64_t key_block_stride, uint64_t value_block_stride,
    uint32_t max_blocks_per_sequence, uint32_t max_sequence_length,
    float scale, void* stream);
int loom_cuda_paged_decode_attention_bf16(
    const uint16_t* query, const uint16_t* key_cache,
    const uint16_t* value_cache, const int32_t* block_tables,
    const int32_t* sequence_lengths, uint16_t* output, uint32_t sequences,
    uint32_t query_heads, uint32_t kv_heads, uint32_t head_size,
    uint32_t value_head_size, uint32_t num_blocks, uint32_t block_size,
    uint64_t key_block_stride, uint64_t value_block_stride,
    uint32_t max_blocks_per_sequence, uint32_t max_sequence_length,
    float scale, void* stream);
// Optional long-context split-K path. The sizing function returns zero when
// the shape should use the base ABI above. Otherwise the caller owns an F32
// workspace with at least the returned element count for the complete pair of
// partial and stable log-sum-exp merge kernels. The original entry points stay
// allocation-free and ABI-compatible.
uint64_t loom_cuda_paged_decode_attention_split_k_workspace_elements(
    uint32_t sequences, uint32_t query_heads, uint32_t kv_heads,
    uint32_t head_size, uint32_t value_head_size,
    uint32_t max_sequence_length);
int loom_cuda_paged_decode_attention_split_k_f32(
    const float* query, const float* key_cache, const float* value_cache,
    const int32_t* block_tables, const int32_t* sequence_lengths,
    float* output, float* workspace, uint64_t workspace_elements,
    uint32_t sequences, uint32_t query_heads, uint32_t kv_heads,
    uint32_t head_size, uint32_t value_head_size, uint32_t num_blocks,
    uint32_t block_size, uint64_t key_block_stride,
    uint64_t value_block_stride, uint32_t max_blocks_per_sequence,
    uint32_t max_sequence_length, float scale, void* stream);
int loom_cuda_paged_decode_attention_split_k_f16(
    const uint16_t* query, const uint16_t* key_cache,
    const uint16_t* value_cache, const int32_t* block_tables,
    const int32_t* sequence_lengths, uint16_t* output, float* workspace,
    uint64_t workspace_elements, uint32_t sequences, uint32_t query_heads,
    uint32_t kv_heads, uint32_t head_size, uint32_t value_head_size,
    uint32_t num_blocks, uint32_t block_size, uint64_t key_block_stride,
    uint64_t value_block_stride, uint32_t max_blocks_per_sequence,
    uint32_t max_sequence_length, float scale, void* stream);
int loom_cuda_paged_decode_attention_split_k_bf16(
    const uint16_t* query, const uint16_t* key_cache,
    const uint16_t* value_cache, const int32_t* block_tables,
    const int32_t* sequence_lengths, uint16_t* output, float* workspace,
    uint64_t workspace_elements, uint32_t sequences, uint32_t query_heads,
    uint32_t kv_heads, uint32_t head_size, uint32_t value_head_size,
    uint32_t num_blocks, uint32_t block_size, uint64_t key_block_stride,
    uint64_t value_block_stride, uint32_t max_blocks_per_sequence,
    uint32_t max_sequence_length, float scale, void* stream);
// Fused in-place RoPE and paged K/V cache write. Query, key, and value have
// logical [tokens, heads, dim] dimensions, a unit dim stride, and explicit
// token/head element strides so packed-QKV views do not need materialization.
// The cosine/sine cache is contiguous [max_position, rotary_dim], with cosine
// then sine halves. Key/value cache tensors have logical
// [blocks, block_size, kv_heads, dim] dimensions; their element strides make
// both vLLM NHD and HND physical layouts expressible. cache_tokens may be less
// than tokens when the engine pads Q/K/V but not slot_mapping. FP8 E4M3 cache
// storage uses one scale for all heads (scale_stride=0) or one scale per KV
// head (scale_stride=1). Negative slots skip the cache write while RoPE still
// updates Q/K. Positions and non-negative slots are trusted engine metadata
// and must be in range.
int loom_cuda_rope_paged_kv_write_f32(
    float* query, float* key, const float* value, const int64_t* positions,
    const float* cos_sin_cache, void* key_cache, void* value_cache,
    const float* key_scales, const float* value_scales,
    const int64_t* slot_mapping, uint32_t tokens, uint32_t cache_tokens,
    uint32_t query_heads, uint32_t kv_heads, uint32_t head_size,
    uint32_t value_head_size, uint32_t rotary_dim, uint32_t max_position,
    uint32_t num_blocks, uint32_t block_size, uint32_t cache_encoding,
    uint32_t scale_stride, uint64_t query_token_stride,
    uint64_t query_head_stride, uint64_t key_token_stride,
    uint64_t key_head_stride, uint64_t value_token_stride,
    uint64_t value_head_stride, uint64_t key_cache_block_stride,
    uint64_t key_cache_page_stride, uint64_t key_cache_head_stride,
    uint64_t value_cache_block_stride, uint64_t value_cache_page_stride,
    uint64_t value_cache_head_stride, uint32_t is_neox, void* stream);
int loom_cuda_rope_paged_kv_write_f16(
    uint16_t* query, uint16_t* key, const uint16_t* value,
    const int64_t* positions, const uint16_t* cos_sin_cache,
    void* key_cache, void* value_cache, const float* key_scales,
    const float* value_scales, const int64_t* slot_mapping, uint32_t tokens,
    uint32_t cache_tokens, uint32_t query_heads, uint32_t kv_heads,
    uint32_t head_size, uint32_t value_head_size, uint32_t rotary_dim,
    uint32_t max_position, uint32_t num_blocks, uint32_t block_size,
    uint32_t cache_encoding, uint32_t scale_stride,
    uint64_t query_token_stride,
    uint64_t query_head_stride, uint64_t key_token_stride,
    uint64_t key_head_stride, uint64_t value_token_stride,
    uint64_t value_head_stride, uint64_t key_cache_block_stride,
    uint64_t key_cache_page_stride, uint64_t key_cache_head_stride,
    uint64_t value_cache_block_stride, uint64_t value_cache_page_stride,
    uint64_t value_cache_head_stride, uint32_t is_neox, void* stream);
int loom_cuda_rope_paged_kv_write_bf16(
    uint16_t* query, uint16_t* key, const uint16_t* value,
    const int64_t* positions, const uint16_t* cos_sin_cache,
    void* key_cache, void* value_cache, const float* key_scales,
    const float* value_scales, const int64_t* slot_mapping, uint32_t tokens,
    uint32_t cache_tokens, uint32_t query_heads, uint32_t kv_heads,
    uint32_t head_size, uint32_t value_head_size, uint32_t rotary_dim,
    uint32_t max_position, uint32_t num_blocks, uint32_t block_size,
    uint32_t cache_encoding, uint32_t scale_stride,
    uint64_t query_token_stride,
    uint64_t query_head_stride, uint64_t key_token_stride,
    uint64_t key_head_stride, uint64_t value_token_stride,
    uint64_t value_head_stride, uint64_t key_cache_block_stride,
    uint64_t key_cache_page_stride, uint64_t key_cache_head_stride,
    uint64_t value_cache_block_stride, uint64_t value_cache_page_stride,
    uint64_t value_cache_head_stride, uint32_t is_neox, void* stream);