crates/loom-cuda-sys/src/lib.rs


    pub fn loom_cuda_top_k_filter_f32(
        logits: *mut f32,
        top_ks: *const i32,
        workspace: *mut u32,
        workspace_elements: u64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_top_k_filter_f16(
        logits: *mut u16,
        top_ks: *const i32,
        workspace: *mut u32,
        workspace_elements: u64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_top_k_filter_bf16(
        logits: *mut u16,
        top_ks: *const i32,
        workspace: *mut u32,
        workspace_elements: u64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_top_p_renorm_f32(
        logits: *mut f32,
        top_ps: *const f32,
        probabilities: *mut f32,
        workspace: *mut u8,
        workspace_bytes: u64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_top_p_renorm_f16(
        logits: *mut u16,
        top_ps: *const f32,
        probabilities: *mut f32,
        workspace: *mut u8,
        workspace_bytes: u64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_top_p_renorm_bf16(
        logits: *mut u16,
        top_ps: *const f32,
        probabilities: *mut f32,
        workspace: *mut u8,
        workspace_bytes: u64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_apply_token_penalties_f32(
        logits: *mut f32,
        prompt_token_ids: *const i64,
        output_token_ids: *const i64,
        presence_penalties: *const f32,
        frequency_penalties: *const f32,
        repetition_penalties: *const f32,
        workspace: *mut u64,
        rows: u32,
        vocab_size: u32,
        prompt_tokens: u32,
        output_tokens: u32,
        workspace_capacity: u32,
        logits_row_stride: u64,
        prompt_row_stride: u64,
        output_row_stride: u64,
        workspace_row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_greedy_speculative_verify(
        draft_token_ids: *const i32,
        target_token_ids: *const i64,
        bonus_token_ids: *const i32,
        cumulative_draft_lengths: *const i32,
        output_token_ids: *mut i32,
        accepted_lengths: *mut i32,
        emitted_lengths: *mut i32,
        requests: u32,
        draft_tokens: u32,
        max_draft_tokens: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_logits_preprocess_f32(
        logits: *mut f32,
        temperatures: *const f32,
        blocked_mask: *const u8,
        bias_row_ids: *const i32,
        bias_token_ids: *const i32,
        bias_values: *const f32,
        bias_count: u32,
        suppressed_row_ids: *const i32,
        suppressed_token_ids: *const i32,
        suppression_count: u32,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_min_p_filter_f32(
        logits: *mut f32,
        min_p: *const f32,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_min_p_filter_f16(
        logits: *mut u16,
        min_p: *const f32,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_min_p_filter_bf16(
        logits: *mut u16,
        min_p: *const f32,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_paged_decode_attention_f32(
        query: *const f32,
        key_cache: *const f32,
        value_cache: *const f32,
        block_tables: *const i32,
        sequence_lengths: *const i32,
        output: *mut f32,
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        num_blocks: u32,
        block_size: u32,
        key_block_stride: u64,
        value_block_stride: u64,
        max_blocks_per_sequence: u32,
        max_sequence_length: u32,
        scale: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_paged_decode_attention_f16(
        query: *const u16,
        key_cache: *const u16,
        value_cache: *const u16,
        block_tables: *const i32,
        sequence_lengths: *const i32,
        output: *mut u16,
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        num_blocks: u32,
        block_size: u32,
        key_block_stride: u64,
        value_block_stride: u64,
        max_blocks_per_sequence: u32,
        max_sequence_length: u32,
        scale: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_paged_decode_attention_bf16(
        query: *const u16,
        key_cache: *const u16,
        value_cache: *const u16,
        block_tables: *const i32,
        sequence_lengths: *const i32,
        output: *mut u16,
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        num_blocks: u32,
        block_size: u32,
        key_block_stride: u64,
        value_block_stride: u64,
        max_blocks_per_sequence: u32,
        max_sequence_length: u32,
        scale: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_paged_decode_attention_split_k_workspace_elements(
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        max_sequence_length: u32,
    ) -> u64;

    pub fn loom_cuda_paged_decode_attention_split_k_f32(
        query: *const f32,
        key_cache: *const f32,
        value_cache: *const f32,
        block_tables: *const i32,
        sequence_lengths: *const i32,
        output: *mut f32,
        workspace: *mut f32,
        workspace_elements: u64,
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        num_blocks: u32,
        block_size: u32,
        key_block_stride: u64,
        value_block_stride: u64,
        max_blocks_per_sequence: u32,
        max_sequence_length: u32,
        scale: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_paged_decode_attention_split_k_f16(
        query: *const u16,
        key_cache: *const u16,
        value_cache: *const u16,
        block_tables: *const i32,
        sequence_lengths: *const i32,
        output: *mut u16,
        workspace: *mut f32,
        workspace_elements: u64,
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        num_blocks: u32,
        block_size: u32,
        key_block_stride: u64,
        value_block_stride: u64,
        max_blocks_per_sequence: u32,
        max_sequence_length: u32,
        scale: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_paged_decode_attention_split_k_bf16(
        query: *const u16,
        key_cache: *const u16,
        value_cache: *const u16,
        block_tables: *const i32,
        sequence_lengths: *const i32,
        output: *mut u16,
        workspace: *mut f32,
        workspace_elements: u64,
        sequences: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        num_blocks: u32,
        block_size: u32,
        key_block_stride: u64,
        value_block_stride: u64,
        max_blocks_per_sequence: u32,
        max_sequence_length: u32,
        scale: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rope_paged_kv_write_f32(
        query: *mut f32,
        key: *mut f32,
        value: *const f32,
        positions: *const i64,
        cos_sin_cache: *const f32,
        key_cache: *mut c_void,
        value_cache: *mut c_void,
        key_scales: *const f32,
        value_scales: *const f32,
        slot_mapping: *const i64,
        tokens: u32,
        cache_tokens: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        rotary_dim: u32,
        max_position: u32,
        num_blocks: u32,
        block_size: u32,
        cache_encoding: u32,
        scale_stride: u32,
        query_token_stride: u64,
        query_head_stride: u64,
        key_token_stride: u64,
        key_head_stride: u64,
        value_token_stride: u64,
        value_head_stride: u64,
        key_cache_block_stride: u64,
        key_cache_page_stride: u64,
        key_cache_head_stride: u64,
        value_cache_block_stride: u64,
        value_cache_page_stride: u64,
        value_cache_head_stride: u64,
        is_neox: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rope_paged_kv_write_f16(
        query: *mut u16,
        key: *mut u16,
        value: *const u16,
        positions: *const i64,
        cos_sin_cache: *const u16,
        key_cache: *mut c_void,
        value_cache: *mut c_void,
        key_scales: *const f32,
        value_scales: *const f32,
        slot_mapping: *const i64,
        tokens: u32,
        cache_tokens: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        rotary_dim: u32,
        max_position: u32,
        num_blocks: u32,
        block_size: u32,
        cache_encoding: u32,
        scale_stride: u32,
        query_token_stride: u64,
        query_head_stride: u64,
        key_token_stride: u64,
        key_head_stride: u64,
        value_token_stride: u64,
        value_head_stride: u64,
        key_cache_block_stride: u64,
        key_cache_page_stride: u64,
        key_cache_head_stride: u64,
        value_cache_block_stride: u64,
        value_cache_page_stride: u64,
        value_cache_head_stride: u64,
        is_neox: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rope_paged_kv_write_bf16(
        query: *mut u16,
        key: *mut u16,
        value: *const u16,
        positions: *const i64,
        cos_sin_cache: *const u16,
        key_cache: *mut c_void,
        value_cache: *mut c_void,
        key_scales: *const f32,
        value_scales: *const f32,
        slot_mapping: *const i64,
        tokens: u32,
        cache_tokens: u32,
        query_heads: u32,
        kv_heads: u32,
        head_size: u32,
        value_head_size: u32,
        rotary_dim: u32,
        max_position: u32,
        num_blocks: u32,
        block_size: u32,
        cache_encoding: u32,
        scale_stride: u32,
        query_token_stride: u64,
        query_head_stride: u64,
        key_token_stride: u64,
        key_head_stride: u64,
        value_token_stride: u64,
        value_head_stride: u64,
        key_cache_block_stride: u64,
        key_cache_page_stride: u64,
        key_cache_head_stride: u64,
        value_cache_block_stride: u64,
        value_cache_page_stride: u64,
        value_cache_head_stride: u64,
        is_neox: u32,
        stream: *mut c_void,
    ) -> c_int;
